external-crates/move/crates/move-compiler/tests/move_2024/matching/let_else_non_divergent.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 285
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04040]: 'let...else' block must diverge
   ┌─ tests/move_2024/matching/let_else_non_divergent.move:11:38
   │
11 │         let ABC::C(x) = subject else { 0 };
   │                                      ^^^^^ 'else' block in 'let...else' must diverge (e.g., 'return', 'abort', or 'break')

warning[W04039]: unable to determine principal type for literal
   ┌─ tests/move_2024/matching/let_else_non_divergent.move:11:40
   │
11 │         let ABC::C(x) = subject else { 0 };
   │                                        ^ Could not determine a concrete type for this numeric literal, so defaulting to 'u64'
   │
   = To avoid this warning, add an explicit type annotation, e.g., '<num>u64'
   = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
